<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:backgroundTint="@color/backgroundtintcolor"
    android:backgroundTintMode="src_atop"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/cb_white"
        android:gravity="center_vertical|center_horizontal"
        android:padding="8dp"
        android:src="@drawable/shakti_full_logo" />

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/arya1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"

                        android:text="@string/app_name"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="#ffffffff"
                        android:textColorHint="#ffffffff"
                        android:textSize="25sp" />


                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/emailentry"
                        android:inputType="textEmailAddress"
                        android:textColor="#ffffffff"
                        android:textColorHint="#ffffffff" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/passwordentry"
                        android:imeActionLabel="Sign in"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:textColor="#ffffffff"
                        android:textColorHint="#ffffffff" />


                    <Button
                        android:id="@+id/loginbutton"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@color/colorAccent"
                        android:text="@string/loginbutton"
                        android:textColor="#ffffffff"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <TextView
        android:id="@+id/skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/copyrightoffice"
        android:textAlignment="center"
        android:textColor="#ffffffff"
        android:typeface="serif" />

</LinearLayout>