<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:visibility="visible"
    android:id="@+id/submitPopup">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textSize="@dimen/_16ssp"
        android:fontFamily="@font/open_sans_regular"
        android:textColor="@color/black"/>

    <ImageView
        android:layout_alignParentEnd="true"
        android:id="@+id/imgCLoseID"
        android:padding="@dimen/_5sdp"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:src="@drawable/met_ic_close"/>


    <LinearLayout
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@+id/imgCLoseID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rlvInternetViewID"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/rounded_corner_gredient_btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/open_sans_regular"
                android:gravity="center"
                android:text="@string/st_nternet"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/rlvBluetothViewID"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/rounded_corner_gredient_btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:text="@string/st_BLUETOOTH"
                android:fontFamily="@font/open_sans_regular"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textSize="@dimen/_14sdp"
                />


        </RelativeLayout>

        <RelativeLayout
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/rlvWifihotspotViewID"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/rounded_corner_gredient_btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:text="@string/st_WifiHotspot"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textSize="@dimen/_14sdp"
                />


        </RelativeLayout>


    </LinearLayout>



</RelativeLayout>



</LinearLayout>